# Image-Processing

./: CMakeLists.txt  Drawing.cpp  Drawing.h  Image.cpp  Image.h  ImageProcessing.cpp  ImageProcessing.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Size.cpp  Size.h  main.cpp
